--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ select {
 <body>
 <!-- Loading overlay -->
     <div class="loading-overlay">
-        <div class="loading-text">Book Your Massage Appointment starting...</div>
+        <div class="loading-text">Book Your Appointment starting...</div>
     </div>
 
 
