--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Your Massage Appointment</title>
+    <title>Book Your Appointment</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome CSS -->
@@ -338,12 +338,12 @@ button {
 <body>
 <!-- Loading overlay -->
 <div class="loading-overlay">
-    <div class="loading-text">Book Your Massage Appointment starting...</div>
+    <div class="loading-text">Book Your Appointment starting...</div>
 </div>
 
 <header class="bg-primary text-white">
     <div class="container">
-        <h1>Book Your Massage Appointment</h1>
+        <h1>Book Your Appointment</h1>
         <button id="preview-info-btn" class="btn btn-light">Before Booking, Read This</button>
     </div>
 </header>
